# PixMeat

./: .gitignore  AGENTS.md  README.md  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  release-checklist.md  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: 00_README.md  01_PRODUCT_REQUIREMENTS.md  02_FUNCTION_BEHAVIOR_SPEC.md  03_UI_UX_SPEC.md  04_SYSTEM_ARCHITECTURE.md  05_TECHNICAL_SPEC.md  06_ALGORITHM_SPEC.md  07_ENGINE_API_SPEC.md  (+9 more)
engine/: pyproject.toml  requirements.txt
engine/beauty_engine/: api.py  beauty.py  body.py  cli.py  cli_entry.py  debug.py  diagnostics.py  errors.py  face.py  io.py  jobs.py  landmark_indices.py  liquify.py  masks.py  params.py  pipeline.py  protocol.py  session.py  smoothing.py  types.py  warp.py
engine/beauty_engine/analysis/: __init__.py  analyzer_v2.py  confidence.py  debug_overlays.py  face_detector.py  face_landmarks.py  human_parsing.py  model_registry.py  person_segmentation.py  region_builder.py  skin_mask.py
engine/beauty_engine/backends/: __init__.py  base.py  cpu.py  opencv_cuda.py  torch_backend.py
engine/beauty_engine/models/: __init__.py  model_config.py
engine/models/: README.md
engine/tests/: conftest.py  test_analysis_v2_schema.py  test_api_e2e.py  test_beauty.py  test_body.py  test_debug_export.py  test_demo_e2e.py  test_face_crop_mapping.py  test_fallback_behavior.py  test_io.py  test_liquify.py  test_mask_cleanup.py  test_masks.py  test_params.py  test_pipeline.py  test_skin_mask_v2.py  test_smoothing.py  test_warp.py
engine/tests/fixtures/: README.md
(+48 files in other folders)
